# rust-jack_

./: .gitignore  .travis.yml  Cargo.toml  README.md  funcs.html  funcs.org
examples/: metro.rs  midiseq.rs
src/: lib.rs  types.rs
tests/: jack_test.rs  lib.rs
