[package]

name = "rust-jack"
description = "JACK Audio Connection Kit bindings for Rust"
version = "0.0.1"
authors = ["Nick Lanham <nick@afternight.org>"]
repository = "https://github.com/nicklan/rust-jack"
readme = "README.md"
keywords = ["jack", "audio", "music", "sound"]
license = "LGPL-2.1"

[lib]
name="jack"